force-app/main/default/objects/Invoice__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>if(
AND(
 (Total__c -  Total_Payments__c &lt; 1),
 From_LMS__c = false
),
0, 
Total__c -  Total_Payments__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>