force-app/main/default/objects/Invoice__c/fields/Billing_Address_Display__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Display__c</fullName>
    <formula>upper(substitute(Billing_Address__r.Address__c + BR() + Billing_Address__r.City__c + &quot;, &quot; +  Billing_Address__r.Province_State_Code__c + BR() + Billing_Address__r.Postal_Code__c + BR() + Text(Billing_Address__r.Country__c), BR()+BR(), BR()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>