force-app/main/default/objects/Invoice__c/fields/Billing_Contact_Display__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Display__c</fullName>
    <formula>Billing_Contact__r.FirstName + &apos; &apos; + Billing_Contact__r.LastName</formula>
    <label>Billing Contact</label>
    <type>Text</type>
</CustomField>