force-app/main/default/objects/Invoice__c/fields/Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payable__c</fullName>
    <formula>if (Total__c  &gt; 0, ( Total_Payments__c /  Total__c ) *  Sales_Commission__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commissions Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>