force-app/main/default/objects/Invoice__c/fields/Commissions_Ajusted__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Ajusted__c</fullName>
    <label>Commissions Ajusted</label>
    <summarizedField>Commission_Adjustment__c.Amount__c</summarizedField>
    <summaryForeignKey>Commission_Adjustment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>