force-app/main/default/objects/Invoice__c/fields/Days_Since_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Due_Date__c</fullName>
    <formula>if(ISPICKVAL(Payment_Terms__c,&apos;&apos;),
Days_Since_Invoice__c - 30,

if(ISPICKVAL(Payment_Terms__c,&apos;Due on Receipt&apos;), 
Days_Since_Invoice__c - 30,

if(ISPICKVAL(Payment_Terms__c,&apos;Net 30 Days&apos;), 
Days_Since_Invoice__c - 30,

if(ISPICKVAL(Payment_Terms__c,&apos;Net 45 Days&apos;), 
Days_Since_Invoice__c - 45,

if(ISPICKVAL(Payment_Terms__c,&apos;Net 60 Days&apos;), 
Days_Since_Invoice__c - 60,

Days_Since_Invoice__c - 90
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>