force-app/main/default/objects/Invoice__c/fields/Days_Since_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Invoice__c</fullName>
    <formula>Today()-Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>