force-app/main/default/objects/Invoice__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <formula>if ( ISPICKVAL(Account__r.Invoice_Method__c, &apos;Automatic&apos;) , &apos;Email&apos;, &apos;Manual Delivery&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Method</label>
    <type>Text</type>
</CustomField>