force-app/main/default/objects/Invoice__c/fields/Delivery_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Name__c</fullName>
    <label>Delivery Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>