force-app/main/default/objects/Invoice__c/fields/ForceUpdate__c.field-meta.xml
<CustomField>
    <fullName>ForceUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ForceUpdate</label>
    <type>Checkbox</type>
</CustomField>