force-app/main/default/objects/Invoice__c/fields/Full_InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>Full_InvoiceId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full InvoiceId</label>
    <type>Text</type>
</CustomField>