force-app/main/default/objects/Invoice__c/fields/Intacct_Do_Not_Sync__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Do_Not_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, the record will not be synced to intacct</description>
    <label>Intacct Do Not Sync</label>
    <type>Checkbox</type>
</CustomField>