force-app/main/default/objects/Invoice__c/fields/Intacct_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_ID__c</fullName>
    <externalId>true</externalId>
    <label>Intacct ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>