force-app/main/default/objects/Invoice__c/fields/Intacct_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Invoice_Number__c</fullName>
    <externalId>true</externalId>
    <label>Intacct Invoice Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>