force-app/main/default/objects/Invoice__c/fields/LearningLogin_Id__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Id__c</fullName>
    <label>LearningLogin Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>