force-app/main/default/objects/Invoice__c/fields/Past_Due_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Delivery_Date__c</fullName>
    <label>Past Due Delivery Date</label>
    <type>DateTime</type>
</CustomField>