force-app/main/default/objects/Invoice__c/fields/Pending_Commission_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Pending_Commission_Adjustment__c</fullName>
    <formula>Commission_Payable__c - Commissions_Ajusted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Commission Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>