force-app/main/default/objects/Invoice__c/fields/Prepayments_Applied__c.field-meta.xml
<CustomField>
    <fullName>Prepayments_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepayments Applied</label>
    <type>Checkbox</type>
</CustomField>