force-app/main/default/objects/Invoice__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(OR(
NOT(ISBLANK(Intacct_ID__c))
), 
&quot;Can&apos;t delete this invoice!&quot;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>