force-app/main/default/objects/Invoice__c/fields/Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission__c</fullName>
    <label>Sales Commission</label>
    <summarizedField>Invoice_Line_Item__c.Sales_Commission__c</summarizedField>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>