force-app/main/default/objects/Invoice__c/fields/Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Count__c</fullName>
    <label>Transaction Count</label>
    <summaryForeignKey>Payment_Transaction__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>