force-app/main/default/objects/Invoice__c/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>false</active>
    <errorConditionFormula>isblank( Account__c )</errorConditionFormula>
    <errorMessage>Account Required</errorMessage>
</ValidationRule>