force-app/main/default/objects/Invoice__c/validationRules/Billing_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_Required</fullName>
    <active>false</active>
    <errorConditionFormula>isblank( Billing_Contact__c )</errorConditionFormula>
    <errorMessage>Billing Contact Required</errorMessage>
</ValidationRule>