force-app/main/default/objects/Invoice__c/validationRules/Billing_Contact_Same_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_Same_Account</fullName>
    <active>false</active>
    <errorConditionFormula>Billing_Contact__r.AccountId !=  Account__r.Id</errorConditionFormula>
    <errorMessage>Billing Contact Doesn&apos;t Belong to the Invoice Account</errorMessage>
</ValidationRule>