force-app/main/default/objects/Invoice__c/validationRules/Block_Invoice_Number_Modify.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Invoice_Number_Modify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Name),
NOT(ISBLANK(PRIORVALUE(Name)))
)</errorConditionFormula>
    <errorMessage>Cannot change the invoice number once it has been set!</errorMessage>
</ValidationRule>