force-app/main/default/objects/Invoice__c/validationRules/Review_After_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Review_After_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>and(
not(Validated__c),
 Reviewed__c 
)</errorConditionFormula>
    <errorMessage>Invoice Must Be Validated Before Review</errorMessage>
</ValidationRule>