force-app/main/default/objects/Invoice__c/validationRules/TotalPaymentTooBig.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalPaymentTooBig</fullName>
    <active>true</active>
    <description>Total_Payments_Can&apos;t_Be_Greater_Than_Total</description>
    <errorConditionFormula>Total_Payments__c &gt; Total__c</errorConditionFormula>
    <errorMessage>Total Payments Can&apos;t Be Greater Than Total</errorMessage>
</ValidationRule>