force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Account__c</columns>
    <columns>Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Tax__c</columns>
    <columns>Sales_Commission__c</columns>
    <columns>Total__c</columns>
    <columns>Balance__c</columns>
    <columns>Past_Due_Balance__c</columns>
    <columns>Days_Since_Invoice__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Prepayments_Applied__c</columns>
    <columns>Reviewed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>