force-app/main/default/objects/Invoice__c/listViews/Copy_of_Invoices_To_Be_Reviewed_on_hold.listView-meta.xml
<ListView>
    <fullName>Copy_of_Invoices_To_Be_Reviewed_on_hold</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>From_LMS__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Reviewed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>On_Hold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>R</value>
    </filters>
    <label>Copy of Invoices To Be Reviewed on hold</label>
</ListView>