force-app/main/default/objects/Invoice__c/listViews/Invoices_on_Hold.listView-meta.xml
<ListView>
    <fullName>Invoices_on_Hold</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Balance__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Past_Due_Delivery_Date__c</columns>
    <columns>On_Hold__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>From_LMS__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Reviewed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>On_Hold__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Refund__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Invoices on Hold</label>
</ListView>