force-app/main/default/objects/Invoice__c/listViews/Invoices_To_Be_Reviewed.listView-meta.xml
<ListView>
    <fullName>Invoices_To_Be_Reviewed</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Order__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/13/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>From_LMS__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Reviewed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoices To Be Reviewed</label>
</ListView>