force-app/main/default/objects/Invoice__c/listViews/LMS_Invoices.listView-meta.xml
<ListView>
    <fullName>LMS_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Balance__c</columns>
    <columns>Total__c</columns>
    <columns>LearningLogin_Id__c</columns>
    <columns>Pending_Commission_Adjustment__c</columns>
    <columns>Commissions_Ajusted__c</columns>
    <columns>Commission_Payable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_LMS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>LMS Invoices</label>
</ListView>