force-app/main/default/objects/Invoice__c/listViews/LMS_Refund_Invoices.listView-meta.xml
<ListView>
    <fullName>LMS_Refund_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Balance__c</columns>
    <columns>Total__c</columns>
    <columns>Intacct_ID__c</columns>
    <columns>LearningLogin_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From_LMS__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Refund__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>LMS Refund Invoices</label>
</ListView>